feat(scala): implement Phases 2.1-2.4 Spark aggregation layer
- Config.scala: 26 configurable pipeline parameters (NDVI, emissivity,
  split-window A0-A6, water vapor, year ranges) via --key value CLI
- SpatialJoin.scala (2.1): long→wide pivot, Sedona ST_GeomFromGeoJSON
  polygon loading, ST_Contains point-in-polygon spatial join
- LSTMath.scala (2.2): scene metadata JSON loader, NDVI→Pv→ε10/ε11→BT10
  → split-window LST with auto-fallback for missing B11/ST_B10
- TargetEncoder.scala (2.3): smoothed global encoding + 5-fold
  LOO cross-validation encoding against LST as target
- FeatureMatrix.scala (2.4): column selection, float rounding,
  train/test split flag, partitionBy(year, split) zstd Parquet output
- Main.scala: full orchestrator calling 2.1→2.2→2.3→2.4 with Sedona
  SQL registrator and CLI args
- build.sbt: Java 17 --add-opens fixes for Kryo/Spark compatibility
- generate-test-data: Go helper for producing synthetic test data
- pool.go: replace PAR1-STUB with real WriteRecords (Phase 1.3)