@@ -31,10 +31,13 @@ lazy val root = project
       case _                        => MergeStrategy.first
     },
 
-    // ── JVM options for Spark local mode ──────────────────────────
+    // ── JVM options for Spark local mode (Java 17 + Kryo compat) ─
     javaOptions ++= Seq(
       "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
       "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
       "--add-opens=java.base/java.util=ALL-UNNAMED",
     ),
     fork := true,
